--- a/biblio.bib
+++ b/biblio.bib
@@ -93,6 +93,16 @@
 	year = {2013},
 	pages = {062002},
 }
+@article{grafke2015relevance,
+  title={Relevance of instantons in Burgers turbulence},
+  author={Grafke, Tobias and Grauer, Rainer and Sch{\"a}fer, Tobias and Vanden-Eijnden, Eric},
+  journal={EPL (Europhysics Letters)},
+  volume={109},
+  number={3},
+  pages={34003},
+  year={2015},
+  publisher={IOP Publishing}
+}
 @article{grigorio_instantons_2017,
 	title = {Instantons in a {Lagrangian} model of turbulence},
 	volume = {50},
@@ -265,7 +275,7 @@ title = {Three-Dimensional Neutron Streaming Calculations Using Adaptive Multile
 	year = {2015},
 	pages = {215--225},
 }
-@article{rolland2016computing,
+@article{rolland_computing_2016,
   title={Computing transition rates for the 1-D stochastic Ginzburg--Landau--Allen--Cahn equation for finite-amplitude noise with a rare event algorithm},
   author={Rolland, Joran and Bouchet, Freddy and Simonnet, Eric},
   journal={Journal of Statistical Physics},
@@ -508,6 +518,17 @@ month={Nov},}
   doi = {10.1103/PhysRevE.95.012102},
   url = {https://link.aps.org/doi/10.1103/PhysRevE.95.012102}
 }
+@article{nemoto2016population,
+  title={Population-dynamics method with a multicanonical feedback control},
+  author={Nemoto, Takahiro and Bouchet, Freddy and Jack, Robert L and Lecomte, Vivien},
+  journal={Physical Review E},
+  volume={93},
+  number={6},
+  pages={062123},
+  year={2016},
+  publisher={APS}
+}
+
 @article{Guevara_Hidalgo_2018,
 	doi = {10.1088/1742-5468/aad6b2},
 	year = 2018,
@@ -596,6 +617,7 @@ month={Nov},}
 	url = "http://www.sciencedirect.com/science/article/pii/0167278989901267",
 	author = "Robert H. Kraichnan and Shiyi Chen",
 	abstract = "The statistical-mechanical treatment of turbulence is made questionable by strong nonlinearity and strong disequilibrium that result in the creation of ordered structures imbedded in disorder. Model systems are described which may provide some hope that a compact, yet faithful, statistical description of turbulence nevertheless is possible. Some essential dynamical features of the models are captured by low-order statistical approximations despite strongly non-Gaussian behavior."
+	}
 
 @Book{lbm_book,
 author = {Michael C. Sukop  AND Daniel T. Thorne Jr},
@@ -603,20 +625,13 @@ title = {Lattice Boltzmann Modeling: An Introduction for Geoscientists And Engin
 publisher = {Springer-Verlag},
 year = {2006},
 }
-
-@article{De_Rosis_2016,
-doi = {10.1209/0295-5075/116/44003},
-url = {https://doi.org/10.1209%2F0295-5075%2F116%2F44003},
-year = 2016,
-month = {nov},
-publisher = {{IOP} Publishing},
-volume = {116},
-number = {4},
-pages = {44003},
-author = {Alessandro De Rosis},
-title = {Non-orthogonal central moments relaxing to a discrete equilibrium: A D2Q9 lattice Boltzmann model},
-journal = {{EPL} (Europhysics Letters)},
-abstract = {A novel D2Q9 lattice Boltzmann scheme based on the relaxation of central moments is presented. Differently from previous efforts, here we introduce a non-orthogonal basis of moments which relax to a discrete local equilibrium. Under these choices, our proposed model recovers exactly the BGK collision kernel if a unique relaxation rate is adopted. Numerical tests involving well-consolidated canonical problems highlight the excellent properties of the algorithm in terms of accuracy, convergence and stability. Moreover, our formulation shows an intelligible derivation and a simple practical implementation.}
-}
-
+@article{cerou2019adaptive,
+  title={Adaptive multilevel splitting: Historical perspective and recent results},
+  author={C{\'e}rou, Fr{\'e}d{\'e}ric and Guyader, Arnaud and Rousset, Mathias},
+  journal={Chaos: An Interdisciplinary Journal of Nonlinear Science},
+  volume={29},
+  number={4},
+  pages={043108},
+  year={2019},
+  publisher={AIP Publishing}
 }
